<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:textColor="@color/dark_blue"
            android:text="@string/tv_name" />

        <EditText
            android:id="@+id/ed_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:drawableLeft="@drawable/userlogo"
            android:drawablePadding="10dp"
            android:hint="@string/h_name"
            android:inputType="textEmailAddress" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:textColor="@color/dark_blue"
            android:text="@string/tv_pass" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:drawableLeft="@drawable/locklogo"
            android:drawablePadding="10dp"

            android:hint="@string/h_pass"
            android:inputType="textPassword" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:textColor="@color/dark_blue"
            android:text="@string/tv_ip" />

        <EditText
            android:id="@+id/ed_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:drawableLeft="@drawable/userlogo"
            android:drawablePadding="10dp"
            android:hint="@string/h_ip"
            android:inputType="number|text" />
    </TableRow>

    <TableRow>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:onClick="logIn"
            android:text="@string/action_login" />

    </TableRow>
    <!--<TableRow>
    <EditText
        android:id="@+id/token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:drawableLeft="@drawable/userlogo"
        android:drawablePadding="10dp"
        android:hint="@string/h_ip"
        android:inputType="number|text" />
    </TableRow>-->
</TableLayout>