<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TableRow>

        <TextView
            android:id="@+id/order_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:padding="5dp"
            android:text="@string/o_id"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!--just a label-->

        <TextView
            android:id="@+id/o_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:padding="5dp"

            android:textSize="16sp" />
        <!--  actual display-->

    </TableRow>

    <!-- From -->
    <TableRow>

        <TextView
            android:id="@+id/from_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:padding="5dp"
            android:text="@string/from"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:padding="5dp"

            android:textSize="16sp" />
    </TableRow>

    <!-- Phone Number -->
    <TableRow>

        <TextView
            android:id="@+id/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:padding="5dp"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:padding="5dp"

            android:textSize="16sp" />
    </TableRow>

    <!-- District -->
    <TableRow>

        <TextView
            android:id="@+id/district_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:padding="5dp"
            android:text="@string/district"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/district"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:padding="5dp"

            android:textSize="16sp" />
    </TableRow>

    <!-- Address -->
    <TableRow>

        <TextView
            android:id="@+id/address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:padding="5dp"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:padding="5dp"

            android:textSize="16sp" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/current_location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:padding="5dp"
            android:text="@string/current_location"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/current_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:padding="5dp"

            android:textSize="16sp" />
    </TableRow>

    <!-- To -->
    <TableRow>

        <TextView
            android:id="@+id/to_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:padding="5dp"
            android:text="@string/to_name"
            android:textColor="@color/black"

            android:textSize="16sp" />

        <TextView
            android:id="@+id/to_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:padding="5dp"

            android:textSize="16sp" />
    </TableRow>

    <!-- To Phone Number -->
    <TableRow>

        <TextView
            android:id="@+id/to_phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:padding="5dp"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/to_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:padding="5dp"

            android:textSize="16sp" />
    </TableRow>

    <!-- To District -->
    <TableRow>

        <TextView
            android:id="@+id/to_district_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:padding="5dp"
            android:text="@string/to_district"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/to_district"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:padding="5dp"

            android:textSize="16sp" />
    </TableRow>

    <!-- To Address -->
    <TableRow>

        <TextView
            android:id="@+id/to_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:padding="5dp"
            android:text="@string/to_address"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/to_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:padding="5dp"

            android:textSize="16sp" />
    </TableRow>

    <!-- Price -->
    <TableRow>

        <TextView
            android:id="@+id/price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:padding="5dp"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:padding="5dp"

            android:textSize="16sp" />
    </TableRow>

    <!-- Cash -->
    <TableRow>

        <TextView
            android:id="@+id/cash_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:padding="5dp"
            android:text="@string/cash"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:padding="5dp"

            android:textSize="16sp" />
    </TableRow>

    <!-- Fragile -->
    <TableRow>

        <TextView
            android:id="@+id/fragile_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:padding="5dp"
            android:text="@string/fragile"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fragile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:padding="5dp"

            android:textSize="16sp" />
    </TableRow>

    <TableRow>

        <Spinner
            android:id="@+id/spinner_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"

            android:padding="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntubold"
            android:onClick="submit"
            android:padding="10dp"
            android:text="@string/bt_submit"
            android:textSize="16sp" /> <!-- Set the background drawable here -->

    </TableRow>
</TableLayout>
